added second section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="relative">
                 <div>
-                    <img src="images/banner.png" alt="">
+                    <img class="w-full" src="images/banner.png" alt="">
                 </div>
                 <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
                     <div><i class="fa-solid fa-star text-2xl text-amber-500"></i></div>
@@ -45,6 +45,69 @@
                 </div>
             </div>
         </header>
+
+        <section class="py-8 lg:py-24">
+            <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-gray-500 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/tea-1.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/tea-2.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Black Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/tea-3.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Lemon Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/tea-4.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Green Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="mb-24">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+                    <div class="h-38 bg-gradient-to-r from-red-50 to-red-300 rounded-xl">
+                    </div>
+                    <div class="bg-gradient-to-r from-orange-100 to-orange-300 rounded-xl row-span-2 ">
+                        <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-stone-100 to-stone-300 rounded-xl row-span-2 ">
+                        <img class="mx-auto my-5" src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="h-38 bg-gradient-to-r from-stone-50 to-stone-300 rounded-xl">
+                    </div>
+                </div>
+                <div>
+                    <h1 class="text-5xl font-bold mb-5">Great Tea , Freashly Presented</h1>
+                    <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h2 class="text-2xl mb-5">Unique Taste</h2>
+                    <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <br>
+                    <h2 class="text-2xl mb-5">Premium Quality</h2>
+                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
