--- a/index.html
+++ b/index.html
@@ -108,6 +108,57 @@
                 </div>
             </div>
         </section>
+        <section class="mb-24">
+            <div class="bg-gradient-to-r from-orange-300 to-orange-700 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
+                <div class="flex justify-center items-center overflow-hidden">
+                <div class="w-5/6">
+                    <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
+                    <p class="mb-5">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised words which don't look even
+                        slightly believable.</p>
+                    <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">Show All</button>
+                </div>
+                </div>
+                <div class="relative py-24">
+                    <div class="absolute z-10 top-44 md:top-52" >
+                        <div class="w-full h-56 md:w-3/4 bg-white text-black rounded-lg flex items-center px-5">
+                            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                                <img class="p-1" src="images/client.png" alt="">
+                            </div>
+                            <div>
+                                <p class="text-gray-500 mb-5"> We are providing the best and suitable home insurance services
+                                    for the people who are interested to treatment</p>
+                                <h1 class="font-bold">Ilham Yuda</h1>
+                                <small class="font-bold text-gray-500">Businessman</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="relative w-full h-56 md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40 left-6 md:left-32">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div>
+                            <p class="text-gray-500 mb-5"> We are providing the best and suitable home insurance services
+                                for the people who are interested to treatment</p>
+                            <h1 class="font-bold">Ilham Yuda</h1>
+                            <small class="font-bold text-gray-500">Businessman</small>
+                        </div>
+                    </div>
+                    <div class="relative top-10 w-full h-56 md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40 left-6 md:left-32">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div>
+                            <p class="text-gray-500 mb-5"> We are providing the best and suitable home insurance services
+                                for the people who are interested to treatment</p>
+                            <h1 class="font-bold">Ilham Yuda</h1>
+                            <small class="font-bold text-gray-500">Businessman</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
