--- a/index.html
+++ b/index.html
@@ -159,6 +159,90 @@
                 </div>
             </div>
         </section>
+        <section>
+
+        </section>
     </main>
+    <footer class="bg-red-200 text-gray-700 py-10 px-4 md:px-16">
+        <div class="w-9/12 mx-auto">
+            <div class="mb-8 flex justify-between">
+                <img class="mb-8" src="images/cup.png" alt="">
+                <div class="flex items-center gap-3">
+                    <h4>Ready to get started?</h4>
+            <button
+              class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold">
+              Get Started
+            </button>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Quick links</h3>
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Insurance</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">About</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Policy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Our services</h3>
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Insurance</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">About</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Policy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Help</h3>
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">Insurance</a>
+                        </li>
+                        <li>
+                            <a class="hover:text-orange-600 " href="#">About</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-2">Subscribe to our newsletter</h3>
+                    <div class="flex flex-col space-y-2">
+                        <div>
+                            <input placeholder="Email Address" type="text" class="bg-transparent border-b-2 border-black w-4/6">
+                            <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-500 rounded-full text-white justify-center items-center inline-flex"></i>
+                            <div class="flex justify-between w-2/5 mb-2 mt-8">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-square-instagram"></i>
+                                <i class="fa-brands fa-square-twitter"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center pt-4 mt-4">
+                <p class="text-sm text-gray-500">© 2027 UIDesign.to - All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
