--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
               colors: {
                 clifford: '#da373d',
               },
+              fontfamily:{
+                manrope: ['Manrope',sans-serif],
+              }
             },
           },
         }
       </script>
 </head>
-<body>
+<body class="font-manrope">
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
         <header class="flex pt-10 mb-20">
             <div>
@@ -159,8 +162,40 @@
                 </div>
             </div>
         </section>
-        <section>
-
+        <section class="mb-24">
+            <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">News & Events</h1>
+                <p class="text-gray-500 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/news-1.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h3 class="font-semibold text-xl opacity-60 m-2">Feb 05, 2027</h3>
+                        <h2 class="font-bold text-xl m-2">Collecting 8 points for discount</h2>
+                        <p class="text-gray-500 m-2">There are many variations of passages of Lorem Ipsum available.</p>
+                        <button class="px-3 py-2">Learn More</button>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/news-2.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h3 class="font-semibold text-xl opacity-60 m-2">Feb 05, 2027</h3>
+                        <h2 class="font-bold text-xl m-2">Collecting 8 points for discount</h2>
+                        <p class="text-gray-500 m-2">There are many variations of passages of Lorem Ipsum available.</p>
+                        <button class="px-3 py-2">Learn More</button>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="images/news-3.png" alt="" class="mx-auto pt-4">
+                    <div class="p-4">
+                        <h3 class="font-semibold text-xl opacity-60 m-2">Feb 05, 2027</h3>
+                        <h2 class="font-bold text-xl m-2">Collecting 8 points for discount</h2>
+                        <p class="text-gray-500 m-2">There are many variations of passages of Lorem Ipsum available.</p>
+                        <button class="px-3 py-2">Learn More</button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="bg-red-200 text-gray-700 py-10 px-4 md:px-16">
